Fix the navbar flickering issue
This is a workaround, may not be an optimal solution

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ li {
 @media screen and (min-width: 75em) {
     .navbar{
         padding: 6px;
+        height: 56px;
+    }
+    #navbarNavDropdown {
+        height: 56px;
     }
 }
 
